# vlaude

./: .dockerignore  .gitignore  README.md  analyze-transcript.js  check-content.js  final-check.js  package.json  show-history.js  test-resume.js  test-session-reader.js  view-current-session.js
.github/workflows/: release-socket-client-ffi.yml
docs/: 17-user-message-scenarios.md  ARCHITECTURE_DATA_FLOW.md  PLAN_DATA_FLOW_REFACTOR.md  REFACTOR_PROGRESS.md  VLAUDE_ARCHITECTURE_V2.md  architecture-flow.md  current-work-状态.md  message-types-and-ui.md  service-registry.md  user-message-scenarios-analysis.md
scripts/: analyze-all-fields.js  analyze-jsonl-structure.js  analyze-jsonl-types.js  analyze-user-message-types.js  jsonl-structure-report.json  jsonl-type-report.json  switch-env.sh  test-session-list-api.sh  trigger-session-update.sh
test/: test-resume.sh  vlaude.sh
vlaude-core/: Cargo.toml
vlaude-core/daemon-logic/: Cargo.toml
vlaude-core/daemon-logic/src/: lib.rs  service.rs  shared_db.rs  watcher.rs
vlaude-core/scripts/: update_plugin.sh
vlaude-core/session-reader/: Cargo.toml
vlaude-core/session-reader-ffi/: Cargo.toml  build.rs  cbindgen.toml
vlaude-core/session-reader-ffi/include/: session_reader_ffi.h
vlaude-core/session-reader-ffi/src/: lib.rs
vlaude-core/session-reader/src/: claude.rs  lib.rs  types.rs
vlaude-core/socket-client/: Cargo.toml
vlaude-core/socket-client/src/: client.rs  error.rs  registry.rs
vlaude-core/vlaude-cli/: Cargo.toml
vlaude-core/vlaude-cli/src/: main.rs
vlaude-core/vlaude-ffi/: Cargo.toml
vlaude-core/vlaude-ffi/src/: lib.rs
