[workspace]
resolver = "2"
members = [
    "session-reader",
    "session-reader-ffi",
    "socket-client",
    "daemon-logic",
    "vlaude-cli",
    "vlaude-ffi",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/vimo-ai/vlaude"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID
uuid = { version = "1", features = ["v4"] }

# Socket.IO
rust_socketio = { version = "0.6", features = ["async"] }

# TLS
native-tls = "0.2"

# Redis
redis = { version = "0.27", features = ["tokio-comp", "aio"] }

# File watching
notify = "6"
notify-debouncer-mini = "0.4"

# CLI
clap = { version = "4", features = ["derive"] }

# FFI
cbindgen = "0.26"

# Testing
tempfile = "3"

# Internal crates
session-reader = { path = "session-reader" }
socket-client = { path = "socket-client" }
daemon-logic = { path = "daemon-logic" }

# External crates
ai-cli-session-collector = { git = "https://github.com/vimo-ai/ai-cli-session-collector" }
