[package]
name = "daemon-logic"
description = "Daemon business logic layer"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
chrono.workspace = true
session-reader.workspace = true
socket-client.workspace = true

# 共享数据库（ETerm/Vlaude 数据统一层）
claude-session-db = { path = "/Users/higuaifan/Desktop/vimo/ETerm/claude-session-db", features = ["writer", "reader", "coordination"] }

[dev-dependencies]
tempfile.workspace = true
