[package]
name = "socket-client"
description = "Socket.IO client for vlaude-server communication"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
chrono.workspace = true
rust_socketio.workspace = true
native-tls.workspace = true
redis.workspace = true
