[package]
name = "vlaude-cli"
description = "CLI entry point for vlaude daemon"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "vlaude"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
daemon-logic.workspace = true
socket-client.workspace = true
hostname = "0.4"
ctrlc = "3"
